--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,13 @@ h6 {
 	margin-bottom: 1.5em;
 }
 
+.btn-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 3rem;
+}
+
 .btn-primary {
 	display: inline-block;
 	text-decoration: none;
